// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Descriptions Descriptions support colon 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label ezd-descriptions-item-no-colon"
              >
                Product
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions Descriptions support style 1`] = `
<div
  class="ezd-descriptions"
  style="background-color: rgb(232, 232, 232);"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions Descriptions.Item support className 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item my-class"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Product
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions column is number 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Product
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Billing
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Prepaid
              </span>
            </div>
          </td>
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                time
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                18:00:00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="3"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Amount
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                $80.00
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions should work with React Fragment 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                bamboo
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                bamboo
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                bamboo
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                bamboo
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                bamboo
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                bamboo
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions vertical layout 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <th
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Product
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <th
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Billing
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-content"
              >
                Prepaid
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <th
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                time
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-content"
              >
                18:00:00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <th
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Amount
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-content"
              >
                $80.00
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Descriptions when item is rendered conditionally 1`] = `
<div
  class="ezd-descriptions"
>
  <div
    class="ezd-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Product
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Billing
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                Prepaid
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                time
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                18:00:00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ezd-descriptions-row"
        >
          <td
            class="ezd-descriptions-item"
            colspan="1"
          >
            <div
              class="ezd-descriptions-item-container"
            >
              <span
                class="ezd-descriptions-item-label"
              >
                Amount
              </span>
              <span
                class="ezd-descriptions-item-content"
              >
                $80.00
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
